--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewBugListTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewBugListTableAndRows.scss
@@ -14,7 +14,7 @@
 
 	.bug-list-table__row {
 		padding: 5px;
-		height: v.$list-item-table-row-height;
+		height: v.$list-row-height;
 		text-align: center;
 	}
 
