--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
@@ -7,12 +7,12 @@
 	// ...overtop the list-sidebar if the screen gets too small
 	z-index: 2;
 	position: fixed;
-	top: v.$search-filter-sort-and-top-bar-top;
+	top: v.$top-bar-top;
 	border: v.$top-bar-border-width solid v.$mode-top-bar-border-color-light;
 	border-width: v.$top-bar-border-width 0 v.$item-view-list-sidebar-border-width 0;
 	background-color: v.$mode-top-bar-background-color-light;
 	height: v.$top-bar-height;
-	/* height: v.$search-filter-sort-bar-height; */
+	/* height: v.$top-bar-height; */
 	width: 100%;
 	font-family: Arial, Helvetica, sans-serif;
 
@@ -20,13 +20,13 @@
 	.js-calc-outer-search-container {
 		@include m.vertical-center();
 
-		left: v.$item-search-bar-left;
+		left: v.$item-view-top-bar-search-bar-left;
 		// This border color should only appear if there was a problem
 		// ...assigning a different background color to this element.
 		// ...the scss for the colors assigned are in app.scss
 		border: 0px solid black;
-		border-radius: v.$search-top-bar-buttton-border-radius;
-		width: v.$item-search-bar-width;
+		border-radius: v.$top-bar-buttton-border-radius;
+		width: v.$item-view-top-bar-search-bar-width;
 	}
 
 	.outer-search-container--invisible {
@@ -44,13 +44,14 @@
 		// This border color should only appear if there was a problem
 		// ...assigning a different background color to this element.
 		// ...the scss for the colors assigned are in app.scss
-		border: v.$top-bar-button-border-width solid black;
-		border-radius: v.$search-top-bar-buttton-border-radius 0 0 v.$search-top-bar-buttton-border-radius;
-		padding: 0px v.$list-item-search-bar-padding 0px v.$list-item-search-bar-padding;
+		border: v.$top-bar-search-bar-border-width solid black;
+		border-right: none;
+		border-radius: v.$top-bar-buttton-border-radius 0 0 v.$top-bar-buttton-border-radius;
+		padding: 0px v.$top-bar-search-bar-padding 0px v.$top-bar-search-bar-padding;
 		background-color: v.$mode-top-bar-search-bar-background-color-light;
-		height: v.$list-item-search-bar-height;
-		width: v.$item-search-bar-width - v.$list-item-search-bar-button-width;
-		font-size: v.$list-item-search-bar-font-size;
+		height: v.$top-bar-search-bar-height;
+		width: v.$item-view-top-bar-search-bar-width - v.$top-bar-search-bar-button-width;
+		font-size: v.$top-bar-search-bar-font-size;
 	}
 
 	.outer-search-container__search-bar-button {
@@ -62,34 +63,34 @@
 		// Instead of relative to make sure the button always stays next to the list-search-bar
 		position: absolute;
 		display: inline-block;
-		border-radius: 0 v.$search-top-bar-buttton-border-radius v.$search-top-bar-buttton-border-radius 0;
+		border-radius: 0 v.$top-bar-buttton-border-radius v.$top-bar-buttton-border-radius 0;
 		// This background color should only appear if there was a problem
 		// ...assigning a different background color to this element.
 		// ...the scss for the colors assigned are in app.scss
 		background-color: black;
-		height: v.$list-item-search-bar-height;
-		width: v.$list-item-search-bar-button-width;
+		height: v.$top-bar-search-bar-height;
+		width: v.$top-bar-search-bar-button-width;
 		cursor: pointer;
 	}
 
 	.outer-search-container__search-bar-button__icon {
 		@include m.dead-center();
 		color: white;
-		font-size: v.$list-item-search-bar-button-icon-font-size;
+		font-size: v.$top-bar-search-bar-button-icon-font-size;
 	}
 
 	.search-bar-and-button-thick-border {
-		border-width: v.$list-item-search-bar-button-focus-border-width;
-		height: v.$search-filter-sort-bar-button-focus-height;
+		border-width: v.$top-bar-search-bar-focus-border-width;
+		height: v.$top-bar-button-focus-height;
 	}
 
 	.list-sort-filter-container {
 		position: absolute;
-		left: v.$top-bar-sort-button-left;
+		left: v.$item-view-top-bar-sort-button-left;
 	}
 
 	.list-sort-filter-container--filter-placement {
-		left: v.$top-bar-filter-button-left;
+		left: v.$item-view-top-bar-filter-button-left;
 	}
 
 	.list-sort-filter-container__button {
@@ -100,8 +101,8 @@
 		z-index: 1;
 		position: absolute;
 		top: 9px;
-		border: v.$search-top-bar-base-button-border-width solid v.$mode-top-bar-button-border-color-light;
-		border-radius: v.$search-top-bar-buttton-border-radius;
+		border: v.$top-bar-base-button-border-width solid v.$mode-top-bar-button-border-color-light;
+		border-radius: v.$top-bar-buttton-border-radius;
 		background-color: v.$mode-top-bar-button-background-color-light;
 		height: v.$top-bar-button-height;
 		width: v.$top-bar-sort-button-width;
@@ -112,26 +113,26 @@
 	}
 
 	.list-sort-filter-container__button--filter-width {
-		width: v.$search-top-bar-filter-button-width;
+		width: v.$top-bar-filter-button-width;
 	}
 
 	.list-sort-filter-container__button--clicked {
 		// Negative margin because border resize moves the element
 		margin: -2px 0px;
-		border: v.$search-top-bar-clicked-dropdown-button-border-width solid black;
-		border-radius: v.$search-top-bar-buttton-border-radius v.$search-top-bar-buttton-border-radius 0 0;
+		border: v.$top-bar-clicked-dropdown-button-border-width solid black;
+		border-radius: v.$top-bar-buttton-border-radius v.$top-bar-buttton-border-radius 0 0;
 		border-bottom: none;
 		height: 45px;
-		width: v.$top-bar-sort-button-width - (v.$search-top-bar-clicked-dropdown-button-border-width-difference * 2);
+		width: v.$top-bar-sort-button-width - (v.$top-bar-clicked-dropdown-button-border-width-difference * 2);
 	}
 
 	.list-sort-filter-container__button--clicked-filter-width {
-		width: v.$search-top-bar-filter-button-width - (v.$search-top-bar-clicked-dropdown-button-border-width-difference * 2);
+		width: v.$top-bar-filter-button-width - (v.$top-bar-clicked-dropdown-button-border-width-difference * 2);
 	}
 
 	.list-sort-filter-container__button__text--active {
 		font-weight: bold;
-		color: v.$filter-active-color;
+		color: v.$filter-button-active-color;
 	}
 
 	.list-sort-filter-container__button__text {
@@ -142,18 +143,22 @@
 	}
 
 	.list-sort-filter-container__button__text--filter-width {
-		width: v.$search-top-bar-filter-button-width;
+		width: v.$top-bar-filter-button-width;
 	}
 
 	.list-sort-filter-container__content-dropdown {
+		// Must be border-box because the zoom on the webpage can resize the border otherwise
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+
 		position: absolute;
 		// Additional 0.2px to fix border overflow in chrome and edge
 		top: 52.2px;
 		border: 3px solid black;
-		border-radius: 0 v.$search-top-bar-buttton-border-radius v.$search-top-bar-buttton-border-radius v.$search-top-bar-buttton-border-radius;
-		padding: 2px 0 6px 0;
+		border-radius: 0 v.$top-bar-buttton-border-radius v.$top-bar-buttton-border-radius v.$top-bar-buttton-border-radius;
 		background-color: white;
-		height: v.$filter-dropdown-content-container-height;
+		height: v.$top-bar-filter-dropdown-content-container-height;
 		width: v.$top-bar-sort-dropdown-content-container-width;
 		cursor: default;
 		// Made visible using JS
@@ -162,7 +167,7 @@
 
 	.list-sort-filter-container__content-dropdown__sort-content-block {
 		position: relative;
-		margin: 12px 0;
+		margin: 12.5px 0;
 		width: 100%;
 	}
 
@@ -180,11 +185,11 @@
 	}
 
 	.list-sort-filter-container__content-dropdown--filter-width {
-		width: v.$search-top-bar-filter-dropdown-content-container-width;
+		width: v.$top-bar-filter-dropdown-content-container-width;
 	}
 
 	.list-sort-filter-container__content-dropdown--shorter {
-		height: 155px;
+		height: v.$top-bar-filter-dropdown-content-container-shorter-height;
 	}
 
 	.list-sort-filter-container__content-dropdown--visible {
@@ -193,14 +198,14 @@
 
 	.list-sort-filter-container__content-dropdown__filter-content {
 		float: left;
-		margin: v.$search-top-bar-filter-button-dropdown-title-margin-top 0 0 v.$search-top-bar-filter-button-dropdown-title-margin-on-one-side;
+		margin: v.$top-bar-filter-button-dropdown-title-margin-top 0 0 v.$top-bar-filter-button-dropdown-title-margin-on-one-side;
 		text-align: center;
 		font-size: v.$filter-dropdown-content-font-size;
 	}
 
 	.list-sort-filter-container__content-dropdown__filter-content--right {
 		float: right;
-		margin: v.$search-top-bar-filter-button-dropdown-title-margin-top v.$search-top-bar-filter-button-dropdown-title-margin-on-one-side 0 0;
+		margin: v.$top-bar-filter-button-dropdown-title-margin-top v.$top-bar-filter-button-dropdown-title-margin-on-one-side 0 0;
 	}
 
 	.list-sort-filter-container__content-dropdown__filter-content__title {
@@ -215,13 +220,18 @@
 		text-align: left;
 	}
 
-	.list-sort-filter-container__content-dropdown__filter-content__block__checkbox,
+	.list-sort-filter-container__content-dropdown__filter-content__block__checkbox-container {
+		display: inline-block;
+		margin: v.$top-bar-filter-button-dropdown-checkbox-container-margin;
+	}
+
 	.list-sort-filter-container__content-dropdown__filter-content__block__label {
-		margin: 5px 3px 5px 3px;
+		display: inline-block;
+		margin: v.$top-bar-filter-button-dropdown-label-margin;
 	}
 
 	.list-sort-filter-container__content-dropdown__filter-content__block__label--active {
-		color: v.$filter-active-color;
+		color: v.$filter-button-active-color;
 	}
 
 	.item-options-container {
@@ -238,8 +248,8 @@
 		position: absolute;
 		right: 0px;
 		// Border given color through JS
-		border: v.$search-top-bar-clicked-dropdown-button-border-width solid transparent;
-		border-radius: v.$search-top-bar-buttton-border-radius v.$search-top-bar-buttton-border-radius 0 0;
+		border: v.$top-bar-clicked-dropdown-button-border-width solid transparent;
+		border-radius: v.$top-bar-buttton-border-radius v.$top-bar-buttton-border-radius 0 0;
 		border-bottom: none;
 		background: none;
 		height: 29px;
@@ -271,7 +281,7 @@
 		top: 29px;
 		right: 0;
 		border: 3px solid black;
-		border-radius: v.$search-top-bar-buttton-border-radius 0 v.$search-top-bar-buttton-border-radius v.$search-top-bar-buttton-border-radius;
+		border-radius: v.$top-bar-buttton-border-radius 0 v.$top-bar-buttton-border-radius v.$top-bar-buttton-border-radius;
 		background-color: white;
 		color: v.$mode-more-distinct-icon-button-text-color-light;
 		width: 129px;
