--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewSidebarTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewSidebarTableAndRows.scss
@@ -10,7 +10,7 @@
 		// Must be more than the item-view in item-view.scss
 		z-index: 1;
 		position: fixed;
-		top: v.$list-table-and-item-view-top + 15;
+		top: v.$list-item-view-top + 15;
 		left: v.$item-view-list-sidebar-width + v.$item-view-list-sidebar-border-width;
 		border: v.$item-view-list-sidebar-border-width solid black;
 		border-left: none;
@@ -42,7 +42,7 @@
 		// Must be more than the item-view in item-view.scss
 		z-index: 1;
 		position: fixed;
-		top: v.$list-table-and-item-view-top;
+		top: v.$list-item-view-top;
 		left: 0px;
 		border: v.$item-view-list-sidebar-border-width solid v.$mode-item-view-list-sidebar-border-color-light;
 		border-left: none;
@@ -68,12 +68,12 @@
 	.list-sidebar__table__row {
 		border-bottom: 1px solid v.$mode-list-row-border-color-light;
 		padding: 5px;
-		height: v.$list-item-table-row-height;
+		height: v.$list-row-height;
 		text-align: center;
 	}
 
 	.list-sidebar__table__row--empty {
-		height: v.$list-item-table-row-height + (v.$list-item-table-row-height * 0.5);
+		height: v.$list-row-height + (v.$list-row-height * 0.5);
 	}
 
 	.list-sidebar__table__header {
