--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -130,14 +130,18 @@ $mode-create-item-form-input-border-color-light: $gray-level-5;
 $mode-create-item-form-input-border-color-dark: black;
 $mode-create-item-form-input-background-color-light: $gray-light-level-5;
 $mode-create-item-form-input-background-color-dark: $gray-dark-level-1;
-$mode-create-item-form-input-focus-box-shadow-color-light: 0 0 0 1px $basic-blue-level-1;
-$mode-create-item-form-input-focus-box-shadow-color-dark: 0 0 0 1px $basic-blue-light-level-5;
+$mode-create-item-form-input-focus-box-shadow-color-light: 0 0 0 1px
+	$basic-blue-level-1;
+$mode-create-item-form-input-focus-box-shadow-color-dark: 0 0 0 1px
+	$basic-blue-light-level-5;
 $mode-create-item-form-input-disabled-background-color-light: $mode-create-item-sidebar-background-color-light;
 $mode-create-item-form-input-disabled-background-color-dark: $mode-create-item-sidebar-background-color-dark;
 $mode-create-item-form-input-disabled-text-color-light: $gray-light-level-10;
 $mode-create-item-form-input-disabled-text-color-dark: $gray-level-6;
-$mode-create-item-form-submit-button-focus-box-shadow-color-light: 0 0 0 1px $gray-dark-level-4;
-$mode-create-item-form-submit-button-focus-box-shadow-color-dark: 0 0 0 1px $gray-light-level-8;
+$mode-create-item-form-submit-button-focus-box-shadow-color-light: 0 0 0 1px
+	$gray-dark-level-4;
+$mode-create-item-form-submit-button-focus-box-shadow-color-dark: 0 0 0 1px
+	$gray-light-level-8;
 $mode-item-view-top-bar-options-dropdown-row-hover-background-color-light: $gray-light-level-4;
 $mode-item-view-top-bar-options-dropdown-row-hover-background-color-dark: $gray-dark-level-4;
 $mode-item-view-item-box-background-color-light: $mode-top-bar-background-color-light;
@@ -166,9 +170,10 @@ $status-orange: #ff9900;
 $status-green: #007e00;
 $status-red: #d14242;
 // Filter button text colors
-$filter-active-color: #0077ff;
-$filter-active-color2: #ae00ff;
-$filter-active-color3: #ffbb00;
+$filter-button-active-color-1: #0077ff;
+$filter-button-active-color-2: #ae00ff;
+$filter-button-active-color-3: #ffbb00;
+$filter-button-active-color: $filter-button-active-color-1;
 
 // Components
 $basic-toggle-switch-on-color: $basic-blue-light-level-4;
@@ -203,15 +208,14 @@ $edit-account-modal-height: 390px;
 $account-sidebar-appearance-theme-button-selected-arrow-container-height: 22px;
 $account-sidebar-logout-button-height: 40px;
 $account-modal-settings-content-container-height: $basic-toggle-switch-height;
-$search-filter-sort-bar-height: 46px;
-$search-filter-sort-bar-button-height: 26px;
-$list-item-search-bar-height: 28px;
-$filter-dropdown-content-container-height: 190px;
-$list-item-table-row-height: 50px;
+$top-bar-height: 46px;
+$top-bar-button-height: 26px;
+$top-bar-search-bar-height: 28px;
+$top-bar-filter-dropdown-content-container-height: 205px;
+$top-bar-filter-dropdown-content-container-shorter-height: 160px;
+$list-row-height: 50px;
 $status-box-height: 27px;
 $create-item-sidebar-height: 700px;
-$top-bar-height: $search-filter-sort-bar-height;
-$top-bar-button-height: $search-filter-sort-bar-button-height;
 $edit-item-name-input-height: 43px;
 $edit-item-description-info-item-box-height: 300px;
 $edit-item-project-bugs-stats-item-box-height: 320px;
@@ -229,16 +233,16 @@ $account-sidebar-appearance-theme-button-selected-container-width: 80px;
 $account-sidebar-appearance-theme-button-arrow-container-width: 24px;
 $account-sidebar-appearance-theme-button-width: $account-sidebar-appearance-theme-button-selected-container-width +
 	$account-sidebar-appearance-theme-button-arrow-container-width;
-$list-item-search-bar-button-width: $list-item-search-bar-height + 10;
-$search-top-bar-filter-button-width: 90px;
-$search-top-bar-filter-dropdown-content-container-width: 260px;
+$top-bar-search-bar-button-width: $top-bar-search-bar-height + 10;
+$top-bar-filter-button-width: 90px;
+$top-bar-filter-dropdown-content-container-width: 260px;
 $top-bar-sort-button-width: 80px;
 $top-bar-sort-dropdown-content-container-width: 120px;
 $list-table-min-width: 1100px;
 $list-table-item-name-width: 250px;
 $status-box-width: 110px;
 $create-item-sidebar-width: 500px;
-$item-search-bar-width: 290px;
+$item-view-top-bar-search-bar-width: 290px;
 $options-button-width: 36px;
 $item-view-list-sidebar-width: 275px;
 $expand-minimize-button-width: 25px;
@@ -246,19 +250,6 @@ $item-view-outer-dividing-container-min-width: 560px;
 $edit-item-name-input-width: 600px;
 $edit-item-name-char-counter-container-width: 50px;
 $item-view-project-bugs-item-box-stats-container-width: 200px;
-
-//==========
-// Position
-//==========
-$navbar-breadcrumb-arrow-top: -2px;
-$navbar-breadcrumb-arrow-left: -2px;
-$navbar-hamburger-button-left: 10px;
-$back-exit-buttons-top: 10px;
-$back-exit-buttons-left-right: 20px;
-$item-search-bar-left: 15px;
-$top-bar-sort-button-left: $item-search-bar-width + ($item-search-bar-left * 2);
-$top-bar-filter-button-left: $top-bar-sort-button-left +
-	$top-bar-sort-button-width + ($item-search-bar-left);
 
 //=========
 // Margins
@@ -273,8 +264,10 @@ $account-sidebar-appearance-contents-container-margin-left-right: 16px;
 $edit-account-form-input-margin-top: 5px;
 $edit-account-create-item-form-input-margin-bottom: 10px;
 $edit-account-modal-link-margin: 18px;
-$search-top-bar-filter-button-dropdown-title-margin-top: 13px;
-$search-top-bar-filter-button-dropdown-title-margin-on-one-side: 20px;
+$top-bar-filter-button-dropdown-title-margin-top: 13px;
+$top-bar-filter-button-dropdown-title-margin-on-one-side: 20px;
+$top-bar-filter-button-dropdown-checkbox-container-margin: 0px 3px;
+$top-bar-filter-button-dropdown-label-margin: 4px 3px;;
 $create-item-sidebar-text-input-margin-top: 2px;
 $display-item-field-margin-left: 11px;
 $item-view-item-box-char-counter-margin: 5px 2px 4px 0px;
@@ -293,15 +286,13 @@ $base-modal-border-width: 3px;
 $account-modal-border-width: 4px;
 $account-modal-toggle-switch-border-width: 3px;
 $account-sidebar-appearance-theme-button-border-width: 1px;
-$search-filter-sort-bar-border-width: 1px;
-$search-top-bar-base-button-border-width: 1px;
-$search-top-bar-clicked-dropdown-button-border-width: 3px;
-$search-top-bar-clicked-dropdown-button-border-width-difference: $search-top-bar-clicked-dropdown-button-border-width -
-	$search-top-bar-base-button-border-width;
-$list-search-bar-button-border-width: 2px;
-$top-bar-button-border-width: $list-search-bar-button-border-width;
-$list-item-search-bar-button-focus-border-width: 3px;
-$top-bar-border-width: $search-filter-sort-bar-border-width;
+$top-bar-border-width: 1px;
+$top-bar-base-button-border-width: 1px;
+$top-bar-clicked-dropdown-button-border-width: 3px;
+$top-bar-clicked-dropdown-button-border-width-difference: $top-bar-clicked-dropdown-button-border-width -
+	$top-bar-base-button-border-width;
+$top-bar-search-bar-border-width: 2px;
+$top-bar-search-bar-focus-border-width: 3px;
 $edit-item-name-input-border-width: 2px;
 $item-view-list-sidebar-border-width: 2px;
 
@@ -313,7 +304,7 @@ $navbar-breadcrumb-round-border-radius: 12px;
 $navbar-hamburger-border-radius: 10px;
 $base-sidebar-border-radius: 25px;
 $account-modal-border-radius: 15px;
-$search-top-bar-buttton-border-radius: 5px;
+$top-bar-buttton-border-radius: 5px;
 $form-input-border-radius: 5px;
 $status-box-border-radius: 50px;
 
@@ -323,7 +314,7 @@ $status-box-border-radius: 50px;
 $navbar-button-text-container-padding: 0 14px 0 14px;
 $account-sidebar-padding-top: 32px;
 $account-sidebar-padding-left-right: 18px;
-$list-item-search-bar-padding: 8px;
+$top-bar-search-bar-padding: 8px;
 $create-item-sidebar-padding: 6px;
 $edit-item-name-input-padding: 4px;
 
@@ -338,17 +329,33 @@ $account-sidebar-account-info-font-size: 15px;
 $account-sidebar-appearance-label-font-size: 16px;
 $account-sidebar-link-font-size: 15px;
 $edit-account-modal-link-font-size: 20px;
-$search-filter-sort-create-item-message-font-size: 24px;
-$list-item-search-bar-font-size: 14px;
-$list-item-search-bar-button-icon-font-size: 14px;
-$search-filter-sort-bar-button-font-size: 14px;
-$top-bar-filter-button-font-size: $search-filter-sort-bar-button-font-size;
+$list-view-top-bar-create-item-message-font-size: 24px;
+$top-bar-search-bar-font-size: 14px;
+$top-bar-search-bar-button-icon-font-size: 14px;
+$top-bar-button-font-size: 14px;
+$top-bar-filter-button-font-size: $top-bar-button-font-size;
 $filter-dropdown-content-font-size: 14px;
 $list-container-empty-list-message-font-size: 32px;
 $item-view-name-font-size: 28px;
 $create-item-sidebar-label-font-size: 15px;
 $item-form-text-input-font-size: 13px;
 $common-line-height: 20px;
+
+//==========
+// Position
+//==========
+$navbar-breadcrumb-arrow-top: -2px;
+$navbar-breadcrumb-arrow-left: -2px;
+$navbar-hamburger-button-left: 10px;
+$back-exit-buttons-top: 10px;
+$back-exit-buttons-left-right: 20px;
+$top-bar-top: $navbar-height;
+$list-item-view-top: $top-bar-top + $top-bar-height + $top-bar-border-width;
+$item-view-top-bar-search-bar-left: 15px;
+$item-view-top-bar-sort-button-left: $item-view-top-bar-search-bar-width +
+	($item-view-top-bar-search-bar-left * 2);
+$item-view-top-bar-filter-button-left: $item-view-top-bar-sort-button-left +
+	$top-bar-sort-button-width + ($item-view-top-bar-search-bar-left);
 
 //=========
 // Opacity
@@ -372,15 +379,10 @@ $account-sidebar-appearance-theme-button-option-larger-width: $account-sidebar-a
 	($account-sidebar-appearance-theme-button-border-width * 2);
 $account-sidebar-appearance-theme-button-dropdown-container-top: $account-sidebar-appearance-theme-button-option-height +
 	($account-sidebar-appearance-theme-button-border-width * 2);
-$search-filter-sort-bar-button-focus-height: $search-filter-sort-bar-button-height +
+$top-bar-button-focus-height: $top-bar-button-height +
 	(
-		(
-				$list-item-search-bar-button-focus-border-width -
-					$list-search-bar-button-border-width
-			) * 2
+		($top-bar-search-bar-focus-border-width - $top-bar-search-bar-border-width) *
+			2
 	);
-$search-filter-sort-and-top-bar-top: $navbar-height;
-$list-table-and-item-view-top: $search-filter-sort-and-top-bar-top +
-	$search-filter-sort-bar-height + $search-filter-sort-bar-border-width;
 $edit-item-name-centering-container-height: $edit-item-name-input-height +
 	($edit-item-name-input-border-width * 2) + ($edit-item-name-input-padding * 2);
