Added Light/Dark mode functionality for blurred backgrounds

--- a/client/src/CSS/scss_partials/home/account/_accountModal.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountModal.scss
@@ -9,7 +9,7 @@
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
-		//border: v.$account-modal-border-width solid black;
+		border: v.$account-modal-border-width solid black;
 		//border-radius: v.$account-modal-border-radius;
 		background-color: white;
 		padding: 30px;
