--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -1,14 +1,15 @@
 @use "./utils/variables" as v;
 @use "./utils/mixins" as m;
 
-/* html,
-body, */
 html,
-body,
+body {
+	width: 100%;
+	overflow: hidden;
+}
+
 .app-component,
 .js-calc-app-component {
 	width: 100%;
-	overflow: hidden;
 	color: v.$mode-home-text-color-light;
 
 	//===========================
@@ -39,6 +40,27 @@ body,
 		background-color: v.$mode-home-background-color-dark;
 		color: v.$mode-home-text-color-dark;
 	}
+
+	// Light/Dark mode background color and opacity for blurred-background
+	.js-set-blurred-background-background-color-and-opacity-dark-mode-false {
+		background-color: v.$mode-blurred-background-background-color-light;
+		opacity: v.$mode-blurred-background-opacity-light;
+	}
+	.js-set-blurred-background-background-color-and-opacity-dark-mode-true {
+		background-color: v.$mode-blurred-background-background-color-dark;
+		opacity: v.$mode-blurred-background-opacity-dark;
+	}
+
+	// Light/Dark mode background color and opacity for click to close blurred-background
+	.js-set-click-to-close-blurred-background-background-color-and-opacity-dark-mode-false {
+		background-color: v.$mode-blurred-background-background-color-light;
+		opacity: v.$mode-click-to-close-blurred-background-opacity-light;
+	}
+	.js-set-click-to-close-blurred-background-background-color-and-opacity-dark-mode-true {
+		background-color: v.$mode-blurred-background-background-color-dark;
+		opacity: v.$mode-click-to-close-blurred-background-opacity-dark;
+	}
+	
 
 	// Light/Dark mode border and background colors for CustomCheckbox
 	.js-set-custom-checkbox-border-and-background-color-dark-mode-false {
@@ -186,7 +208,7 @@ body,
 		}
 	}
 
-	// Light/Dark mode CreateItemSidebar disabled base label 
+	// Light/Dark mode CreateItemSidebar disabled base label
 	.js-set-create-item-sidebar-diabled-label-dark-mode-false {
 		color: v.$mode-create-item-form-input-disabled-text-color-light;
 		pointer-events: none;
@@ -327,7 +349,6 @@ body,
 			background-color: v.$mode-item-view-list-sidebar-expand-minimize-button-hover-background-color-dark;
 		}
 	}
-
 
 	// Theme background colors
 	.js-set-dark-background-color-theme-teal {
